[package]
name = "{{project-name}}"
version = "2023.12.14"
edition = "2021"

[dependencies]
anyhow = { version = "*" }
clap = { version = "*", features = ["derive", "env"] }
tokio = { version = "*", features = ["full"] }
tower-http = { version = "*", features = ["trace"] }
axum = { version = "*" }
tracing = { version = "*" }
tracing-subscriber = { version = "*", features = ["env-filter"] }
# reqwest = { version = "*", default-features = false, features = [
#     "rustls",
#     "json",
#     "multipart",
#     "stream",
# ] }
serde_json = { version = "*" }
diesel = { version = "*", features = [
    "postgres",
    "postgres_backend",
    "serde_json",
] }
diesel-async = { version = "*", features = ["bb8", "postgres"] }
percent-encoding = { version = "*" }
bb8 = { version = "*" }
bb8-async-memcached = { git = "https://github.com/Magicloud/bb8-async-memcached.git" }
